--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -22,4 +22,12 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.xhtml</url-pattern>
   </servlet-mapping>
+    <welcome-file-list>
+   <!-- <welcome-file>index.html</welcome-file> --> 
+    <welcome-file>index.xhtml</welcome-file>
+    <!--  <welcome-file>index.jsp</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.jsp</welcome-file>-->
+  </welcome-file-list>
 </web-app>
